--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
         .gos-cats-section { background: white; padding: 15px 0; border-bottom: 1px solid #f0f0f0; }
         .gos-cats-scroll { display: flex; justify-content: space-between; padding: 0 15px; }
         .gos-cat-item { display: flex; flex-direction: column; align-items: center; gap: 8px; width: 70px; position: relative; }
-        .gos-cat-icon-bg { width: 58px; height: 58px; background: #f5f5f5; border-radius: 16px; display: flex; align-items: center; justify-content: center; }
-        .gos-cat-icon { width: 44px; height: 44px; }
+        .gos-cat-icon-bg { width: 58px; height: 58px; background: #f5f5f5; border-radius: 16px; display: flex; align-items: center; justify-content: center; overflow: hidden; }
+        .gos-cat-icon { width: 100%; height: 100%; object-fit: cover; }
         .gos-cat-title { font-size: 12px; color: #555; text-align: center; }
         .gos-cat-item.active .gos-cat-title { color: var(--kaspi-red); font-weight: 600; }
         .gos-cat-item.active::after { content: ''; position: absolute; bottom: -15px; left: 10px; right: 10px; height: 2px; background: var(--kaspi-red); }
@@ -333,3 +333,4 @@
     </script>
 </body>
 </html>
+
