--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Kaspi.kz</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
     <style>
         :root {
             --kaspi-red: #ff2d17;
@@ -69,12 +70,50 @@
         .egov-img-wrapper.visible { opacity: 1; }
         .egov-img-wrapper img { width: 100%; height: 100%; object-fit: cover; display: block; }
 
+        /* --- ЭКРАН УДОСТОВЕРЕНИЯ --- */
         #udost-page {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            z-index: 7100; background: white; transform: translateX(100%);
-            transition: transform 0.5s cubic-bezier(0.2, 0.8, 0.2, 1);
+            z-index: 7100; background: #f2f2f5; transform: translateX(100%);
+            transition: transform 0.4s cubic-bezier(0.2, 0.8, 0.2, 1);
+            display: flex; flex-direction: column;
         }
         #udost-page.active { transform: translateX(0); }
+        .udost-header {
+            background: white; padding: 12px 15px; display: flex; align-items: center;
+            border-bottom: 1px solid #e5e5e5;
+        }
+        .udost-content {
+            flex: 1; display: flex; flex-direction: column; align-items: center; padding: 20px 15px;
+        }
+        .udost-switcher {
+            width: 100%; background: #e3e3e8; border-radius: 10px; padding: 2px;
+            display: flex; margin-bottom: 30px;
+        }
+        .udost-switch {
+            flex: 1; text-align: center; padding: 8px 0; font-size: 14px; font-weight: 500; border-radius: 8px;
+        }
+        .udost-switch.active { background: white; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+        .doc-zoom-container {
+            flex: 1; width: 100%; display: flex; align-items: center; justify-content: center;
+            overflow: hidden; touch-action: none;
+        }
+        #document-img {
+            width: 90%; max-width: 320px; height: auto;
+            border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            transition: transform 0.3s ease-out;
+        }
+        .udost-footer {
+            padding: 20px 15px calc(20px + env(safe-area-inset-bottom));
+            background: white; display: flex; flex-direction: column; gap: 10px;
+        }
+        .btn-blue {
+            background: #007aff; color: white; border-radius: 12px; padding: 16px;
+            display: flex; align-items: center; justify-content: center; gap: 10px; font-weight: 600;
+        }
+        .btn-outline {
+            border: 1px solid #007aff; color: #007aff; border-radius: 12px; padding: 16px;
+            display: flex; align-items: center; justify-content: center; gap: 10px; font-weight: 600;
+        }
 
         /* --- ГОСУСЛУГИ --- */
         #final-app-page {
@@ -99,7 +138,7 @@
         .gos-doc-img { width: 66px; height: auto; object-fit: contain; }
         .gos-doc-title { font-size: 13px; font-weight: 500; color: #333; line-height: 1.3; }
 
-        /* Категории (мини-бары) */
+        /* Категории (мини-бары) - ИСПРАВЛЕНО ДЛЯ ЗАПОЛНЕНИЯ */
         .gos-cats-section { background: white; padding: 15px 0; border-bottom: 1px solid #f0f0f0; }
         .gos-cats-scroll { display: flex; justify-content: space-between; padding: 0 15px; }
         .gos-cat-item { display: flex; flex-direction: column; align-items: center; gap: 8px; width: 70px; position: relative; }
@@ -259,7 +298,33 @@
     </div>
 
     <div id="egov-loader"><div class="egov-img-wrapper" id="egov-wrapper"><img src="egov.png"></div></div>
-    <div id="udost-page"><div style="padding: 20px; font-weight: 600;" onclick="closeUdostPage()">‹ Назад</div></div>
+
+    <div id="udost-page">
+        <div class="udost-header">
+            <div onclick="closeUdostPage()" style="font-size: 24px; padding-right: 20px;">‹</div>
+            <div style="flex:1; text-align:center; font-weight:600; margin-right:35px;">Удостоверение личности</div>
+        </div>
+        
+        <div class="udost-content">
+            <div class="udost-switcher">
+                <div class="udost-switch active">Документ</div>
+                <div class="udost-switch">Реквизиты</div>
+            </div>
+            
+            <div class="doc-zoom-container" id="zoom-area">
+                <img src="document.png" id="document-img">
+            </div>
+        </div>
+
+        <div class="udost-footer">
+            <div class="btn-blue">
+                <img src="qr_white.png" style="width:20px; display:none;" onerror="this.style.display='none'"> Предъявить документ
+            </div>
+            <div class="btn-outline">
+                <img src="share_blue.png" style="width:20px; display:none;" onerror="this.style.display='none'"> Отправить документ
+            </div>
+        </div>
+    </div>
 
     <script>
         const tg = window.Telegram.WebApp;
@@ -269,6 +334,7 @@
             setTimeout(() => document.getElementById('preloader').classList.add('fade-out'), 1000);
         });
 
+        // FaceID и ПИН логика
         function startGovAuth() {
             tg.HapticFeedback.impactOccurred('light');
             const pinScreen = document.getElementById('pin-screen');
@@ -295,6 +361,7 @@
             document.getElementById('final-app-page').classList.remove('active');
         }
 
+        // Открытие Удостоверения с лоадером eGov
         function openUdost() {
             tg.HapticFeedback.impactOccurred('medium');
             const loader = document.getElementById('egov-loader');
@@ -315,6 +382,29 @@
             document.getElementById('udost-page').classList.remove('active');
         }
 
+        // Зум удостоверения (Pinch-to-Zoom)
+        const docImg = document.getElementById('document-img');
+        const zoomArea = document.getElementById('zoom-area');
+        const hammertime = new Hammer(zoomArea);
+
+        hammertime.get('pinch').set({ enable: true });
+
+        let currentScale = 1;
+
+        hammertime.on('pinch', (ev) => {
+            currentScale = ev.scale;
+            if (currentScale < 1) currentScale = 1; 
+            docImg.style.transition = 'none';
+            docImg.style.transform = `scale(${currentScale})`;
+        });
+
+        hammertime.on('pinchend', () => {
+            currentScale = 1;
+            docImg.style.transition = 'transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275)';
+            docImg.style.transform = `scale(1)`;
+        });
+
+        // Модалка товара
         function openProduct(card) {
             const imgSrc = card.querySelector('img').src;
             const modal = document.getElementById('product-modal');
@@ -333,4 +423,3 @@
     </script>
 </body>
 </html>
-
