--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
         #document-img {
             width: 90%; max-width: 320px; height: auto;
             border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-            transition: transform 0.3s ease-out;
+            touch-action: none;
+            will-change: transform;
         }
         .udost-footer {
             padding: 20px 15px calc(20px + env(safe-area-inset-bottom));
@@ -423,3 +424,4 @@
     </script>
 </body>
 </html>
+
