--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         /* --- ЭКРАН УДОСТОВЕРЕНИЯ --- */
         #udost-page {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            z-index: 7100; background: #f2f2f5; transform: translateX(100%);
+            z-index: 7100; background: white; transform: translateX(100%);
             transition: transform 0.4s cubic-bezier(0.2, 0.8, 0.2, 1);
             display: flex; flex-direction: column;
         }
@@ -95,7 +95,8 @@
         .udost-switch.active { background: white; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
         .doc-zoom-container {
             flex: 1; width: 100%; display: flex; align-items: center; justify-content: center;
-            overflow: hidden; touch-action: none;
+    overflow: hidden; touch-action: none;
+    background: white;
         }
         #document-img {
             width: 90%; max-width: 320px; height: auto;
@@ -402,30 +403,45 @@
 
         manager.on('pinchmove', (ev) => {
             scale = lastScale * ev.scale;
-            updateTransform();
+            if (scale < 1) scale = 1; // Не даем уменьшить меньше оригинала
+            updateTransform(false);
         });
 
         manager.on('pinchend', () => {
             lastScale = scale;
+            if (scale <= 1.05) { // Если почти вернули к оригиналу — центрируем
+                resetToCenter();
+            }
         });
 
         manager.on('panmove', (ev) => {
-            // Двигаем только если картинка увеличена
-            if (scale > 1) {
+            if (scale > 1.01) { // Двигаем только если есть хоть какой-то зум
                 posX = lastPosX + ev.deltaX;
                 posY = lastPosY + ev.deltaY;
-                updateTransform();
+                updateTransform(false);
             }
         });
 
         manager.on('panend', () => {
             lastPosX = posX;
             lastPosY = posY;
+            if (scale <= 1.01) {
+                resetToCenter();
+            }
         });
 
-        function updateTransform() {
-            // Ограничиваем минимальный зум единицей
-            if (scale < 1) scale = 1;
+        function resetToCenter() {
+            scale = 1;
+            lastScale = 1;
+            posX = 0;
+            posY = 0;
+            lastPosX = 0;
+            lastPosY = 0;
+            updateTransform(true); // Включаем анимацию для возврата в центр
+        }
+
+        function updateTransform(animate) {
+            docImg.style.transition = animate ? 'transform 0.3s ease-out' : 'none';
             docImg.style.transform = `translate(${posX}px, ${posY}px) scale(${scale})`;
         }
 
@@ -448,5 +464,6 @@
     </script>
 </body>
 </html>
+
 
 
