--- a/index.html
+++ b/index.html
@@ -99,10 +99,13 @@
     background: white;
         }
         #document-img {
-            width: 90%; max-width: 320px; height: auto;
-            border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-            touch-action: none;
-            will-change: transform;
+            width: 90%; 
+    max-width: 320px; 
+    height: auto;
+    border-radius: 12px; 
+    /* Тень удалена */
+    touch-action: none;
+    will-change: transform;
         }
         .udost-footer {
             padding: 20px 15px calc(20px + env(safe-area-inset-bottom));
@@ -464,6 +467,7 @@
     </script>
 </body>
 </html>
+
 
 
 
