--- a/index.html
+++ b/index.html
@@ -82,10 +82,12 @@
 
         .udost-top-fixed {
             background: white; z-index: 10;
+            padding-top: env(safe-area-inset-top);
+            border-bottom: 1px solid #f2f2f5;
         }
 
         .udost-header {
-            background: white; padding: 12px 15px; display: flex; align-items: center;
+            background: white; padding: 12px 15px; display: flex; align-items: center; height: 44px;
         }
 
         .udost-switcher {
@@ -563,3 +565,4 @@
     </script>
 </body>
 </html>
+
