--- a/index.html
+++ b/index.html
@@ -371,9 +371,11 @@
                     </div>
                     <div class="page-footer-inner">
                         <div class="btn-blue" onclick="vibrate()">
+                            <img src="predyavit.png" style="width: 24px; height: 24px; object-fit: contain;">
                             Предъявить документ
                         </div>
                         <div class="btn-outline" onclick="vibrate()">
+                            <img src="otpravit.png" style="width: 24px; height: 24px; object-fit: contain;">
                             Отправить документ
                         </div>
                     </div>
@@ -426,6 +428,7 @@
                     </div>
                     <div class="page-footer-inner">
                         <div class="btn-outline" onclick="vibrate()">
+                            <img src="otpravit.png" style="width: 24px; height: 24px; object-fit: contain;">
                             Отправить реквизиты
                         </div>
                     </div>
@@ -565,4 +568,5 @@
     </script>
 </body>
 </html>
+
 
