--- a/index.html
+++ b/index.html
@@ -18,6 +18,43 @@
             --border-color: #e5e5e5;
         }
 
+        /* Затемнение фона при открытии QR */
+#qr-overlay {
+    position: fixed;
+    top: 0; left: 0; width: 100%; height: 100%;
+    background: rgba(0, 0, 0, 0.4);
+    z-index: 9000;
+    display: none; /* Скрыто по умолчанию */
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    align-items: flex-end;
+}
+
+/* Сама шторка с QR */
+#qr-sheet {
+    width: 100%;
+    background: white;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    transform: translateY(100%); /* Убрано вниз */
+    transition: transform 0.4s cubic-bezier(0.2, 0.8, 0.2, 1);
+    padding-bottom: env(safe-area-inset-bottom);
+    display: flex;
+    justify-content: center;
+}
+
+#qr-sheet img {
+    width: 100%;
+    height: auto;
+    display: block;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+/* Классы для активации анимации */
+#qr-overlay.active { display: flex; opacity: 1; }
+#qr-overlay.active #qr-sheet { transform: translateY(0); }
+        
         /* --- СИСТЕМНЫЕ ЭКРАНЫ --- */
         #preloader {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
@@ -370,7 +407,7 @@
                         <img src="document.png" id="document-img">
                     </div>
                     <div class="page-footer-inner">
-                        <div class="btn-blue" onclick="vibrate()">
+                        <div class="btn-blue" onclick="openQr()">
                             <img src="predyavit.png" style="width: 24px; height: 24px; object-fit: contain;">
                             Предъявить документ
                         </div>
@@ -565,8 +602,29 @@
             setTimeout(() => modal.style.display = 'none', 300);
         }
         function vibrate() { tg.HapticFeedback.impactOccurred('light'); }
+
+        function openQr() {
+    const overlay = document.getElementById('qr-overlay');
+    overlay.style.display = 'flex';
+    // Задержка в 10мс нужна, чтобы браузер успел применить display:flex перед началом анимации
+    setTimeout(() => overlay.classList.add('active'), 10);
+    tg.HapticFeedback.impactOccurred('medium');
+}
+
+function closeQr() {
+    const overlay = document.getElementById('qr-overlay');
+    overlay.classList.remove('active');
+    // Скрываем полностью только после завершения анимации (через 400мс)
+    setTimeout(() => overlay.style.display = 'none', 400);
+}
     </script>
+<div id="qr-overlay" onclick="closeQr()">
+    <div id="qr-sheet" onclick="event.stopPropagation()">
+        <img src="udostqr.png" alt="QR Code">
+    </div>
+</div>
 </body>
 </html>
+
 
 
