--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 /* Сама шторка с QR */
 #qr-sheet {
     width: 100%;
+    height: 50vh;
     background: white;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
@@ -49,14 +50,6 @@
     padding-bottom: env(safe-area-inset-bottom);
     display: flex;
     justify-content: center;
-}
-
-#qr-sheet img {
-    width: 100%;
-    height: auto;
-    display: block;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
 }
 
 /* Классы для активации анимации */
@@ -632,9 +625,3 @@ function closeQr() {
 </div>
 </body>
 </html>
-
-
-
-
-
-
