--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@
         .banner-item { flex: 0 0 54%; aspect-ratio: 1080 / 680; border-radius: 12px; background-size: cover; background-position: center; }
         .services-grid { display: grid; grid-template-columns: repeat(4, 1fr); background: white; padding: 10px 5px 15px; gap: 20px 0; }
         .service-item { display: flex; flex-direction: column; align-items: center; text-align: center; }
-        .service-icon { width: 42px; height: 42px; }
-        .service-name { font-size: 11.5px; font-weight: 700; margin-top: 8px; }
+        .service-icon { width: 42px; height: 42px; object-fit: contain; opacity: 0.9; }
+        .service-name { font-size: 11.5px; font-weight: 800; margin-top: 8px; }
 
         .promo-scroll-area { margin-top: 12px; overflow-x: auto; padding-bottom: 10px; scrollbar-width: none; }
         .promo-scroll-area::-webkit-scrollbar { display: none; }
@@ -669,4 +669,5 @@ function closeQr() {
 </div>
 </body>
 </html>
+
 
