--- a/index.html
+++ b/index.html
@@ -338,7 +338,6 @@
             <div class="gos-docs-section">
                 <div class="gos-docs-scroll">
                     <div class="gos-doc-card" onclick="openUdost()"><img src="udost.png" class="gos-doc-img"><div class="gos-doc-title">Удостоверение личности</div></div>
-                    <div class="gos-doc-card"><img src="passport.png" class="gos-doc-img"><div class="gos-doc-title">Паспорт гражданина РК</div></div>
                 </div>
             </div>
 
@@ -382,10 +381,10 @@
 
         <div class="promo-scroll-area">
             <div class="promo-grid-container">
-                <div class="promo-card"><img src="red.png" class="promo-img"><div><div class="promo-main-text">Рассрочка 0-0-12</div><div class="promo-subtext">Покупки</div></div></div>
-                <div class="promo-card"><img src="credit.png" class="promo-img"><div><div class="promo-main-text">Кредит наличными</div><div class="promo-subtext">на Kaspi Gold</div></div></div>
+                <div class="promo-card"><img src="red.png" class="promo-img"><div><div class="promo-main-text">Рассрочка 0-0-12</div><div class="promo-subtext">Покупки в рассрочку</div></div></div>
+                <div class="promo-card"><img src="credit.png" class="promo-img"><div><div class="promo-main-text">Кредит наличными</div><div class="promo-subtext">До 2-х миллионов на Kaspi Gold</div></div></div>
                 <div class="promo-card"><img src="deposit.png" class="promo-img"><div><div class="promo-main-text">Депозит</div><div class="promo-subtext">15% годовых</div></div></div>
-                <div class="promo-card"><img src="magnum.png" class="promo-img"><div><div class="promo-main-text">Magnum</div><div class="promo-subtext">Продукты</div></div></div>
+                <div class="promo-card"><img src="magnum.png" class="promo-img"><div><div class="promo-main-text">Magnum</div><div class="promo-subtext">Продукты на дом</div></div></div>
             </div>
         </div>
 
@@ -669,5 +668,6 @@ function closeQr() {
 </div>
 </body>
 </html>
+
 
 
